Fix sidebar menu spacing on small screens

--- a/_static/css/gazebo.css
+++ b/_static/css/gazebo.css
@@ -90,9 +90,10 @@ header.navbar {
 }
 
 .bd-sidebar-primary {
-  max-height: calc(100vh - var(--pst-header-height) + var(--gz-doc-header-height));
+  max-height: calc(100vh - var(--pst-header-height) - var(--gz-doc-header-height));
   top: calc(var(--pst-header-height) + var(--gz-doc-header-height));
   background-color: var(--gz-color-primary-sidebar);
+  padding-top: 1em;
 }
 
 .bd-sidebar-secondary {
